Landing page changes

--- a/src/app/landing/landing.html
+++ b/src/app/landing/landing.html
@@ -97,84 +97,6 @@
 		</div>
 	</div>
 	<div class="row">
-		<!-- <div id="carousel-example-generic" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding carousel slide" data-ride="carousel">
-			<div class="carousel-inner" role="listbox">
-				<div class="item active">
-					<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 most-rented-equip">
-							<p>Scissor Lifts</p>
-						<img src="/assets/images/image_page2.png" alt="most rented pic">
-					</div>
-					<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 most-rented-equip">
-							<p>Boom Lifts</p>
-						<img src="/assets/images/image_page2.png" alt="most rented pic">
-					</div>
-					<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 most-rented-equip">
-							<p>Backhoes & Attachment Lifts</p>
-						<img src="/assets/images/image_page2.png" alt="most rented pic">
-					</div>
-					<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 most-rented-equip">
-							<p>Mini Excavators</p>
-						<img src="/assets/images/image_page2.png" alt="most rented pic">
-					</div>
-					<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 most-rented-equip">
-							<p>Vehicles & Propane</p>
-						<img src="/assets/images/image_page2.png" alt="most rented pic">
-					</div>
-				</div>
-
-				<div class="item">
-					<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 most-rented-equip">
-							<p>Scissor Lifts</p>
-						<img src="/assets/images/image_page2.png" alt="most rented pic">
-					</div>
-					<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 most-rented-equip">
-							<p>Boom Lifts</p>
-						<img src="/assets/images/image_page2.png" alt="most rented pic">
-					</div>
-					<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 most-rented-equip">
-							<p>Backhoes & Attachment Lifts</p>
-						<img src="/assets/images/image_page2.png" alt="most rented pic">
-					</div>
-					<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 most-rented-equip">
-							<p>Mini Excavators</p>
-						<img src="/assets/images/image_page2.png" alt="most rented pic">
-					</div>
-					<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 most-rented-equip">
-							<p>Vehicles & Propane</p>
-						<img src="/assets/images/image_page2.png" alt="most rented pic">
-					</div>
-				</div>
-
-				<div class="item">
-					<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 most-rented-equip">
-							<p>Scissor Lifts</p>
-						<img src="/assets/images/image_page2.png" alt="most rented pic">
-					</div>
-					<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 most-rented-equip">
-							<p>Boom Lifts</p>
-						<img src="/assets/images/image_page2.png" alt="most rented pic">
-					</div>
-					<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 most-rented-equip">
-							<p>Backhoes & Attachment Lifts</p>
-						<img src="/assets/images/image_page2.png" alt="most rented pic">
-					</div>
-					<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 most-rented-equip">
-							<p>Mini Excavators</p>
-						<img src="/assets/images/image_page2.png" alt="most rented pic">
-					</div>
-					<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 most-rented-equip">
-							<p>Vehicles & Propane</p>
-						<img src="/assets/images/image_page2.png" alt="most rented pic">
-					</div>
-				</div>
-			</div>
-			<a class="left carousel-control landing-carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-				<i class="fa fa-angle-left" aria-hidden="true"></i>
-			</a>
-			<a class="right carousel-control landing-carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-				<i class="fa fa-angle-right" aria-hidden="true"></i>
-			</a>
-		</div> -->
 		<uib-carousel interval="myInterval" no-wrap="noWrapSlides" class="landing-carousel-control">
       <uib-slide>
 					<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 most-rented-equip"  ng-repeat="category in displayCategories | limitTo:5" ng-click="fetchMostRentedProducts(category)">
@@ -221,133 +143,23 @@
 			</div>
 		</div>
 		<div class="row">
-			<!-- <div id="carousel-example-generic1" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding carousel slide" data-ride="carousel">
-				<div class="carousel-inner" role="listbox">
-					<div class="item active">
-						<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 most-rented-equip">
-								<p>Scissor Lifts</p>
-							<img src="/assets/images/image_page2.png" alt="most rented pic">
-						</div>
-						<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 most-rented-equip">
-								<p>Boom Lifts</p>
-							<img src="/assets/images/image_page2.png" alt="most rented pic">
-						</div>
-						<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 most-rented-equip">
-								<p>Backhoes & Attachment Lifts</p>
-							<img src="/assets/images/image_page2.png" alt="most rented pic">
-						</div>
-						<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 most-rented-equip">
-								<p>Mini Excavators</p>
-							<img src="/assets/images/image_page2.png" alt="most rented pic">
-						</div>
-						<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 most-rented-equip">
-								<p>Vehicles & Propane</p>
-							<img src="/assets/images/image_page2.png" alt="most rented pic">
-						</div>
-					</div>
-
-					<div class="item">
-						<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 most-rented-equip">
-								<p>Scissor Lifts</p>
-							<img src="/assets/images/image_page2.png" alt="most rented pic">
-						</div>
-						<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 most-rented-equip">
-								<p>Boom Lifts</p>
-							<img src="/assets/images/image_page2.png" alt="most rented pic">
-						</div>
-						<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 most-rented-equip">
-								<p>Backhoes & Attachment Lifts</p>
-							<img src="/assets/images/image_page2.png" alt="most rented pic">
-						</div>
-						<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 most-rented-equip">
-								<p>Mini Excavators</p>
-							<img src="/assets/images/image_page2.png" alt="most rented pic">
-						</div>
-						<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 most-rented-equip">
-								<p>Vehicles & Propane</p>
-							<img src="/assets/images/image_page2.png" alt="most rented pic">
-						</div>
-					</div>
-
-					<div class="item">
-						<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 most-rented-equip">
-								<p>Scissor Lifts</p>
-							<img src="/assets/images/image_page2.png" alt="most rented pic">
-						</div>
-						<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 most-rented-equip">
-								<p>Boom Lifts</p>
-							<img src="/assets/images/image_page2.png" alt="most rented pic">
-						</div>
-						<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 most-rented-equip">
-								<p>Backhoes & Attachment Lifts</p>
-							<img src="/assets/images/image_page2.png" alt="most rented pic">
-						</div>
-						<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 most-rented-equip">
-								<p>Mini Excavators</p>
-							<img src="/assets/images/image_page2.png" alt="most rented pic">
-						</div>
-						<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 most-rented-equip">
-								<p>Vehicles & Propane</p>
-							<img src="/assets/images/image_page2.png" alt="most rented pic">
-						</div>
-					</div>
-				</div>
-				<a class="left carousel-control landing-carousel-control" href="#carousel-example-generic1" role="button" data-slide="prev">
-					<i class="fa fa-angle-left" aria-hidden="true"></i>
-				</a>
-				<a class="right carousel-control landing-carousel-control" href="#carousel-example-generic1" role="button" data-slide="next">
-					<i class="fa fa-angle-right" aria-hidden="true"></i>
-				</a>
-			</div> -->
 			<uib-carousel interval="myInterval" no-wrap="noWrapSlides" class="landing-carousel-control">
       <uib-slide>
-					<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 most-rented-equip">
-							<p>Scissor Lifts</p>
-						<img src="/assets/images/image_page2.png" alt="most rented pic">
-					</div>
-					<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 most-rented-equip">
-							<p>Boom Lifts</p>
-						<img src="/assets/images/image_page2.png" alt="most rented pic">
-					</div>
-					<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 most-rented-equip">
-							<p>Backhoes & Attachment Lifts</p>
-						<img src="/assets/images/image_page2.png" alt="most rented pic">
-					</div>
-					<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 most-rented-equip">
-							<p>Mini Excavators</p>
-						<img src="/assets/images/image_page2.png" alt="most rented pic">
-					</div>
-					<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 most-rented-equip">
-							<p>Vehicles & Propane</p>
-						<img src="/assets/images/image_page2.png" alt="most rented pic">
+					<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 most-rented-equip" ng-repeat="category in displayCategories | limitTo: 5" ng-click="fetchMostBoughtProducts(category)">
+            <p>{{category.Name}}</p>
+            <img ng-src="{{category.Image_path}}" err-src alt="most rented pic" style="width:100%;">
 					</div>
       </uib-slide>
       <uib-slide>
-					<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 most-rented-equip">
-							<p>Scissor Lifts</p>
-						<img src="/assets/images/image_page2.png" alt="most rented pic">
-					</div>
-					<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 most-rented-equip">
-							<p>Boom Lifts</p>
-						<img src="/assets/images/image_page2.png" alt="most rented pic">
-					</div>
-					<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 most-rented-equip">
-							<p>Backhoes & Attachment Lifts</p>
-						<img src="/assets/images/image_page2.png" alt="most rented pic">
-					</div>
-					<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 most-rented-equip">
-							<p>Mini Excavators</p>
-						<img src="/assets/images/image_page2.png" alt="most rented pic">
-					</div>
-					<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 most-rented-equip">
-							<p>Vehicles & Propane</p>
-						<img src="/assets/images/image_page2.png" alt="most rented pic">
+					<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 most-rented-equip" ng-repeat="category in displayCategories.slice(5, displayCategories.length) | limitTo: 5" ng-click="fetchMostBoughtProducts(category)">
+            <p>{{category.Name}}</p>
+            <img ng-src="{{category.Image_path}}" err-src alt="most rented pic" style="width:100%;">
 					</div>
       </uib-slide>
     </uib-carousel>
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 rented-detail-col">
 				<div class="col-lg-5 col-md-5 col-sm-12 col-xs-12 rented-detail-left">
-					<h3>Scissor Lifts</h3>
+					<h3>{{selectecMostBoughtCategory.Name}}</h3>
 					<p class="desc-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -355,20 +167,12 @@
 					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 					proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
 				</div>
-				<div class="col-lg-2 col-md-2 col-sm-12 col-xs-12 other-equipment">
-					<img src="/assets/images/image_page2.png">
-					<p class="desc-text">Backhoes & Attachment</p>
-				</div>
-				<div class="col-lg-2 col-md-2 col-sm-12 col-xs-12 other-equipment">
-					<img src="/assets/images/image_page2.png">
-					<p class="desc-text">Mini Excavators</p>
-				</div>
-				<div class="col-lg-2 col-md-2 col-sm-12 col-xs-12 other-equipment">
-					<img src="/assets/images/image_page2.png">
-					<p class="desc-text">Vehicles & Propane</p>
+				<div class="col-lg-2 col-md-2 col-sm-12 col-xs-12 other-equipment" ng-repeat="product in mostBoughtCategoryProducts | limitTo:3">
+          <img ng-src="{{product.Product_Image[0].ProductImage_Path}}" style="width:100%">
+          <p class="desc-text">{{product.Product_Name}}</p>
 				</div>
 				<div class="col-lg-7 col-md-7 col-sm-12 col-xs-12 text-right view-all-btn">
-					<button class="btn all-btn sign_mybtn primary-btn autowidth">View All</button>
+					<button class="btn all-btn sign_mybtn primary-btn autowidth" ui-sref="hm.search.results({category_id : selectecMostBoughtCategory.Id})">View All</button>
 				</div>
 			</div>
 		</div>
