--- a/src/app/styles/main.css
+++ b/src/app/styles/main.css
@@ -2985,7 +2985,7 @@ td.quantity .ng-invalid-pattern .error{display:block;}
 }
 
 .landing-search:after, .landing-search:before {
-	top: 72.3%;
+	top: 72%;
 	border: solid transparent;
 	content: " ";
 	height: 0;
@@ -3018,6 +3018,10 @@ td.quantity .ng-invalid-pattern .error{display:block;}
 	width: 50%;
   display: inline-block;
   height: 50px;
+  padding-left: 15px;
+  padding-right: 15px;
+  border: none;
+  border-radius: 4px;
 }
 
 .landing-search-div button {
